<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_white"
        android:paddingLeft="45dp"
        android:paddingTop="50dp"
        android:paddingRight="45dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/txtExitTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lab_exit"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/txtExitContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtExitTitle"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/lab_exit_confirm"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtExitContent"
            android:layout_marginTop="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnNoExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/lab_no"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnYesExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lab_yes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>